# Aegis

./: .gitignore  Cargo.toml  LICENSE  deny.toml  sonar-project.properties
.cargo/: audit.toml
.docs/: Doc-11-构建、签名与发布流水线设计.md
.github/workflows/: ci.yml
common/: Cargo.toml  build.rs
common/proto/: aegis.proto
common/src/: config.rs  crypto.rs  detection.rs  error.rs  governor.rs  lib.rs  protocol.rs  telemetry.rs
common/src/collectors/: linux.rs  mod.rs  windows.rs
common/tests/: config_tests.rs
console/: Cargo.toml
console-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console-ui/src/: App.tsx  styles.css
console-ui/src/__tests__/: aiInsightActions.test.tsx  copyCommandModal.test.tsx  graphStyle.test.ts  mobileReadOnly.test.tsx  ua.test.ts
console-ui/src/api/: aegisClient.ts  types.ts
console-ui/src/components/: CopyCommandModal.tsx
console-ui/src/utils/: graphStyle.ts  ua.ts
console/src/: lib.rs  main.rs  model.rs  store.rs  store_tests.rs
mock/: Cargo.toml
mock/src/: main.rs
probe/: Cargo.toml  build.rs
probe/src/: main.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
