[package]
name = "common"
edition = "2024"
version.workspace = true
license = "AGPL-3.0-only"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
getrandom = "0.2"
prost = "0.12"
prost-types = "0.12"

[lints]
workspace = true
