[package]
name = "common"
edition = "2024"
version.workspace = true
license = "AGPL-3.0-only"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chacha20poly1305 = { version = "0.10", features = ["std"] }
getrandom = "0.2"
hmac = "0.12"
prost = "0.12"
prost-types = "0.12"
arc-swap = "1"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
argon2 = "0.5"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
yara = { version = "0.31", default-features = false, features = ["vendored", "bundled-4_5_5"] }

[target.'cfg(windows)'.dependencies]
sysinfo = "0.30"
winreg = "0.52"
winapi-util = "0.1"
wmi = "0.18"
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_Kernel",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"

[lints]
workspace = true
