[package]
name = "console"
edition = "2024"
version.workspace = true
license = "AGPL-3.0-only"

[dependencies]
common = { path = "../common" }
aes-kw = { version = "0.2", features = ["std"] }
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
rand = "0.8"

[lints]
workspace = true
