[package]
name = "mock"
edition = "2024"
version.workspace = true
license = "AGPL-3.0-only"

[dependencies]
common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
rand = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[lints]
workspace = true
