[package]
name = "probe"
edition = "2024"
version.workspace = true
license = "AGPL-3.0-only"

[dependencies]
common = { path = "../common" }
prost = "0.12"
tracing = "0.1"
hmac = "0.12"
aes-kw = { version = "0.2", features = ["std"] }
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.18"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[lints]
workspace = true
